--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,14 +1,12 @@
-name: Build Succeed on PR
+name: Build on PR
 
 on:
   pull_request:
     branches:
       - master
 
-
 jobs:
   build:
-    name: Build the project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,8 +18,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
       
-      # - name: Generate prisma client
-      #   run: npm run db:generate
+      - name: Generate prisma client
+        run: npm run db:generate
         
       - name: Run Build
         run: npm run build
